<resources>
    <string name="app_name">Wallpapers</string>
    <string name="app_folder_name" translatable="false">WallsFolder</string>
    <string name="warning">No internet connection! :(</string>

    <string name="settings">Options</string>
    <string name="pref_theme">App theme</string>
    <string name="pref_theme_sum_on">Dark theme enabled</string>
    <string name="pref_theme_sum_off">Light theme enabled</string>
    <string name="pref_grid">Columns number</string>
    <string name="pref_grid_sum">Change the album\'s number of columns</string>
    <string name="two">2 columns</string>
    <string name="three">3 columns</string>
    <string name="four">4 columns</string>

    <string-array name="pref_grid_options" translatable="false">
        <item>@string/two</item>
        <item>@string/three</item>
        <item>@string/four</item>
    </string-array>
    <string-array name="pref_grid_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="wallpaper_summary">%s (%s)</string>
    <string name="perm_rationale">To let You save or apply wallpapers on your phone, Wallpapers needs access to your files</string>

    <string name="loading">Please wait&#8230; :D</string>
    <string name="done">Done :D</string>
    <string name="set_as">Set as&#8230;</string>
    <string name="imageType" translatable="false">image/</string>
</resources>
